...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter text" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="TbH-J5-oIm">
                                <rect key="frame" x="16" y="75" width="361" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="textField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BLe-jk-tKd">
                                <rect key="frame" x="147.33333333333334" y="125.00000000000001" width="98.333333333333343" height="35.666666666666671"/>
                                <accessibility key="accessibilityConfiguration" identifier="generateButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Generate">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="generateImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dhk-Bo-C20"/>
                                </connections>
                            </button>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KAl-Xp-vkp">
                                <rect key="frame" x="39.333333333333343" y="268.66666666666663" width="314.33333333333326" height="314.66666666666663"/>
                                <accessibility key="accessibilityConfiguration" identifier="generatedImage"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="KAl-Xp-vkp" secondAttribute="height" multiplier="1:1" id="jd5-O2-vbD"/>
                                </constraints>
                            </imageView>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="mXu-YF-hOT">
                                <rect key="frame" x="186" y="415" width="20" height="20"/>
                            </activityIndicatorView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4TP-c0-VHi">
                                <rect key="frame" x="177" y="641.66666666666663" width="39" height="39"/>
                                <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="4TP-c0-VHi" secondAttribute="height" multiplier="1:1" id="dDI-Cy-4Iw"/>
                                </constraints>
                                <color key="tintColor" systemColor="systemRedColor"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal">
...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ajh-vZ-b1E" id="QkU-nS-BsM">
                                            <rect key="frame" x="0.0" y="0.0" width="393" height="350"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HiC-rX-T1e">
                                                    <rect key="frame" x="59" y="8" width="275" height="334"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="savedImage"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="HiC-rX-T1e" secondAttribute="height" multiplier="1:1" id="wst-Cp-5e2"/>
                                                    </constraints>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9UQ-gx-wyS">
                                                    <rect key="frame" x="290.66666666666669" y="298.66666666666669" width="43.333333333333314" height="43.333333333333314"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="saveButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="9UQ-gx-wyS" secondAttribute="height" multiplier="1:1" id="uJo-ES-diu"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="likeFill"/>
                                                    <connections>
...
